Fix problems in hexagon drawing Fix failing tests